istio/nodejs/nodeapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodeapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodeapp
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '7071'
    spec:
      containers:
      - name: nodeapp
        imagePullPolicy: Always
        image: dckreg:5000/nodeapp:1.1
        ports:
        - containerPort: 3000
        - containerPort: 7071
        command:
        - sh
        - -c
        - node server.js
