istio/nodejs/nodeapp-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
  labels:
    app: nodeapp
spec:
  #type: NodePort
  #clusterIP: None
  ports:
    - port: 3000
      name: http
    - port: 7071
      name: http-prom
  selector:
    app: nodeapp
